add tests and a few new functions

--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "keywords": [],
   "license": "ISC",
   "author": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --respawn app.ts",
+    "test": "jest --watch"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3"
   }
 }
