--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "scratchpad",
+  "name": "tree-chat",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "license": "ISC",
+  "license": "MIT",
   "author": "",
   "main": "index.js",
   "scripts": {
