--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
   "author": "vandesm14",
   "main": "app.ts",
   "scripts": {
+    "cli": "ts-node cli.ts",
     "start": "ts-node-dev --respawn app.ts",
     "test": "jest --watch"
   },
+  "dependencies": {
+    "readline-sync": "^1.4.10",
+    "ts-node": "^10.5.0",
+    "ts-node-dev": "^1.1.8"
+  },
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "@types/readline-sync": "^1.4.4",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3"
   }
