--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "readline-sync": "^1.4.10",
+    "inquirer": "^8.2.0",
     "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
+    "@types/inquirer": "^8.2.0",
     "@types/jest": "^27.4.0",
-    "@types/readline-sync": "^1.4.4",
+    "@types/node": "^17.0.18",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3"
   }
