--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
   "author": "vandesm14",
   "main": "app.ts",
   "scripts": {
-    "cli": "ts-node cli.ts",
-    "start": "ts-node-dev --respawn app.ts",
-    "test": "jest --watch"
+    "fmt": "prettier --write --config .prettierrc *.ts",
+    "start": "ts-node app.ts",
+    "dev": "ts-node-dev app.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "inquirer": "^8.2.0",
-    "ts-node": "^10.5.0",
-    "ts-node-dev": "^1.1.8"
+    "ts-node": "^10.5.0"
   },
   "devDependencies": {
     "@types/inquirer": "^8.2.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.18",
     "jest": "^27.5.1",
-    "ts-jest": "^27.1.3"
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
+    "ts-node-dev": "^1.1.8"
   }
 }
