--- a/package.json
+++ b/package.json
@@ -22,18 +22,15 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "inquirer": "^8.2.0",
-    "ts-node": "^10.5.0",
+    "parcel": "^2.3.2",
+    "preact": "^10.6.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/inquirer": "^8.2.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.18",
     "@types/uuid": "^8.3.4",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
-    "ts-node-dev": "^1.1.8"
+    "ts-jest": "^27.1.3"
   }
 }
