--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
   },
   "license": "MIT",
   "author": "vandesm14",
-  "main": "app.ts",
   "scripts": {
-    "dev": "ts-node-dev app.ts",
+    "build": "parcel build ./src/index.html",
     "fmt": "prettier --write --config .prettierrc *.ts",
-    "start": "ts-node app.ts",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "start": "parcel ./src/index.html"
   },
   "dependencies": {
     "parcel": "^2.3.2",
@@ -27,10 +24,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
+    "@parcel/transformer-sass": "^2.3.2",
     "@types/uuid": "^8.3.4",
-    "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3"
+    "typescript": "^4.6.2"
   }
 }
