--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
 {
-  "name": "tree-chat",
-  "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "homepage": "https://github.com/Vandesm14/TreeChat#readme",
-  "bugs": {
-    "url": "https://github.com/Vandesm14/TreeChat/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Vandesm14/TreeChat.git"
-  },
-  "license": "MIT",
-  "author": "vandesm14",
+  "name": "treechat",
+  "type": "module",
   "scripts": {
-    "build": "parcel build ./src/index.html",
-    "fmt": "prettier --write --config .prettierrc *.ts",
-    "start": "parcel ./src/index.html -p 5500"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "ts-check": "tsc --noEmit --watch"
   },
   "dependencies": {
     "parcel": "^2.3.2",
     "preact": "^10.6.6",
     "snowflake-uuid": "^1.0.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.3.2",
     "@types/uuid": "^8.3.4",
     "prettier": "^2.5.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.4",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.1.0",
+    "vite": "^3.1.0"
   }
 }
