--- a/package.json
+++ b/package.json
@@ -8,21 +8,20 @@
     "ts-check": "tsc --noEmit --watch"
   },
   "dependencies": {
+    "nanoid": "^4.0.0",
     "parcel": "^2.3.2",
     "preact": "^10.6.6",
-    "snowflake-uuid": "^1.0.0",
-    "uuid": "^8.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-use-localstorage": "^3.5.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.3.2",
-    "@types/uuid": "^8.3.4",
-    "prettier": "^2.5.1",
-    "typescript": "^4.6.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
 }
