--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,7 @@
 {
   "tabWidth": 2,
   "useTabs": false,
-  "bracketSpacing": true,
-  "filepath": "./src",
-  "semi": true,
   "singleQuote": true,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "semi": true
 }
