--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "treechat",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "ts-check": "tsc --noEmit --watch"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "ts-check": "tsc --noEmit --watch",
+    "eslint": "eslint .",
+    "format": "prettier -w \"**/*.{ts,tsx,html}\"",
+    "format:check": "prettier -c \"**/*.{ts,tsx,html}\""
   },
   "dependencies": {
-    "nanoid": "^4.0.0",
-    "parcel": "^2.3.2",
-    "preact": "^10.6.6",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-use-localstorage": "^3.5.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.3.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
-    "prettier": "^2.5.1",
+    "eslint": "^8.24.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "vite": "^3.1.0"
   }
 }
