--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
